@@ -3,10 +3,7 @@ package com.test.financialtracker.transaction.service;
 
 import com.test.financialtracker.account.domain.models.Account;
 import com.test.financialtracker.account.repository.AccountPort;
-import com.test.financialtracker.common.exception.BusinessRuleException;
-import com.test.financialtracker.common.exception.DuplicateTransactionException;
-import com.test.financialtracker.common.exception.InsufficientFundsException;
-import com.test.financialtracker.common.exception.ResourceNotFoundException;
+import com.test.financialtracker.common.exception.*;
 import com.test.financialtracker.transaction.domains.models.*;
 import com.test.financialtracker.transaction.domains.tranformers.TransactionMapper;
 import com.test.financialtracker.transaction.repository.TransactionRepository;
@@ -35,46 +32,46 @@ public class TransactionService {
 
 
     @Transactional
-    public TransactionResponse deposit(DepositRequest request, UUID callerId) {
+    public TransactionResponse deposit(DepositRequest request, UUID callerId, UUID idempotencyKey) {
 
-        var existing = txRepo.findByReferenceId(request.depositKey());
+        var existing = txRepo.findByReferenceId(idempotencyKey);
         if (existing.isPresent()) {
-            log.info("Idempotent deposit callerId={} referenceId={}", callerId, request.depositKey());
+            log.info("Idempotent deposit callerId={} referenceId={}", callerId, idempotencyKey);
             throw new DuplicateTransactionException(txMapper.toDomain(existing.get()));
         }
 
         Account account = accountPort.findByIdWithLock(request.accountId());
 
-        assertOwnership(account, callerId, "deposit");
+        assertOwnership(account, callerId, "Deposit Account");
 
         account.credit(request.amount());
 
         accountPort.save(account);
         Transaction tx = Transaction.deposit(
-                account.getId(), request.amount(), request.depositKey()
+                account.getId(), request.amount(), idempotencyKey
         );
         Transaction saved = txMapper.toDomain(txRepo.save(txMapper.toEntity(tx)));
 
         log.info("Deposit processed callerId={} accountId={} amount={} referenceId={}",
-                callerId, account.getId(), request.amount(), request.depositKey());
+                callerId, account.getId(), request.amount(), idempotencyKey);
 
         return TransactionResponse.from(saved);
     }
 
 
     @Transactional
-    public TransactionResponse withdraw(WithdrawRequest request, UUID callerId) {
+    public TransactionResponse withdraw(WithdrawRequest request, UUID callerId, UUID idempotencyKey) {
 
         // ── 1. Idempotency ──────────────────────────────────────────
-        var existing = txRepo.findByReferenceId(request.idempotencyKey());
+        var existing = txRepo.findByReferenceId(idempotencyKey);
         if (existing.isPresent()) {
-            log.info("Idempotent withdrawal callerId={} referenceId={}", callerId, request.idempotencyKey());
+            log.info("Idempotent withdrawal callerId={} referenceId={}", callerId, idempotencyKey);
             throw new DuplicateTransactionException(txMapper.toDomain(existing.get()));
         }
 
         Account account = accountPort.findByIdWithLock(request.accountId());
 
-        assertOwnership(account, callerId, "withdrawal");
+        assertOwnership(account, callerId, "Withdrawal Account");
 
         try {
             account.debit(request.amount());
@@ -86,42 +83,58 @@ public class TransactionService {
 
         accountPort.save(account);
         Transaction tx = Transaction.withdrawal(
-                account.getId(), request.amount(), request.idempotencyKey()
+                account.getId(), request.amount(), idempotencyKey
         );
         Transaction saved = txMapper.toDomain(txRepo.save(txMapper.toEntity(tx)));
 
         log.info("Withdrawal processed callerId={} accountId={} amount={} referenceId={}",
-                callerId, account.getId(), request.amount(), request.idempotencyKey());
+                callerId, account.getId(), request.amount(), idempotencyKey);
 
         return TransactionResponse.from(saved);
     }
 
 
     @Transactional
-    public TransactionResponse transfer(TransferRequest request, UUID callerId) {
+    public TransactionResponse transfer(TransferRequest request, UUID callerId, UUID idempotencyKey) {
 
         if (request.sourceId().equals(request.destinationId())) {
             throw new BusinessRuleException("Source and destination accounts must be different");
         }
 
-        var existing = txRepo.findByReferenceId(request.idempotencyKey());
+        var existing = txRepo.findByReferenceId(idempotencyKey);
         if (existing.isPresent()) {
-            log.info("Idempotent transfer callerId={} referenceId={}", callerId, request.idempotencyKey());
+            log.info("Idempotent transfer callerId={} referenceId={}", callerId, idempotencyKey);
             throw new DuplicateTransactionException(txMapper.toDomain(existing.get()));
         }
-        boolean srcFirst = request.sourceId().compareTo(request.destinationId()) < 0;
 
-        UUID firstLockId = srcFirst ? request.sourceId() : request.destinationId();
-        UUID secondLockId = srcFirst ? request.destinationId() : request.sourceId();
+        /*
+         * DEADLOCK PREVENTION:
+         *   If User A transfers to B while User B transfers to A simultaneously,
+         *   both threads try to lock both rows. Without ordering, each thread
+         *   holds one lock and waits for the other → deadlock.
+         *   By always locking the lower UUID first, both threads acquire
+         *   locks in the same order, so one waits while the other completes.
+         */
 
-        Account first = accountPort.findByIdWithLock(firstLockId);
-        Account second = accountPort.findByIdWithLock(secondLockId);
+        // ID A: source
+        // ID B: destination
+        // B < A
+        // srcFirst = false
+        // firstLockId = B
+        //
+        Account source;
+        Account destination;
 
-        Account source = first.getId().equals(request.sourceId()) ? first : second;
-        Account destination = first.getId().equals(request.sourceId()) ? second : first;
+        if (request.sourceId().compareTo(request.destinationId()) < 0) {
+            source = accountPort.findByIdWithLock(request.sourceId());
+            destination = accountPort.findByIdWithLock(request.destinationId());
+        } else {
+            destination = accountPort.findByIdWithLock(request.destinationId());
+            source = accountPort.findByIdWithLock(request.sourceId());
+        }
 
-        assertOwnership(source, callerId, "transfer source");
-        assertOwnership(destination, callerId, "transfer destination");
+        assertOwnership(source, callerId, "Source Account");
+        assertOwnership(destination, callerId, "Destination Account");
 
         try {
             source.debit(request.amount());
@@ -137,13 +150,13 @@ public class TransactionService {
 
         Transaction tx = Transaction.transfer(
                 source.getId(), destination.getId(),
-                request.amount(), request.idempotencyKey()
+                request.amount(), idempotencyKey
         );
         Transaction saved = txMapper.toDomain(txRepo.save(txMapper.toEntity(tx)));
 
         log.info("Transfer processed callerId={} srcId={} destId={} amount={} referenceId={}",
                 callerId, source.getId(), destination.getId(),
-                request.amount(), request.idempotencyKey());
+                request.amount(), idempotencyKey);
 
         return TransactionResponse.from(saved);
     }
@@ -173,14 +186,15 @@ public class TransactionService {
             UUID callerId
     ) {
         Account account = accountPort.findById(accountId);
-        assertOwnership(account, callerId, "history query");
+        assertOwnership(account, callerId, "History Account");
 
         if (from != null && to != null && from.isAfter(to)) {
             throw new BusinessRuleException("'from' date must be before 'to' date");
         }
 
-        Instant effectiveTo = to != null ? to : null;
-        Instant effectiveFrom = from != null ? from : null;
+        Instant effectiveTo = to;
+        Instant effectiveFrom = from;
+        Instant effectiveCursor = cursor;
         if (effectiveFrom == null && effectiveTo == null) {
             effectiveFrom = Instant.now().minus(java.time.Duration.ofDays(30));
         }
@@ -190,7 +204,7 @@ public class TransactionService {
                 : DEFAULT_PAGE_SIZE;
 
         List<TransactionResponse> items = txRepo
-                .findHistory(accountId, type, effectiveFrom, effectiveTo, cursor, effectivePageSize)
+                .findHistory(accountId, type != null ? type.name() : null, effectiveFrom, effectiveTo, cursor, effectivePageSize)
                 .stream()
                 .map(txMapper::toDomain)
                 .map(TransactionResponse::from)
@@ -198,7 +212,7 @@ public class TransactionService {
 
         boolean hasMore = items.size() == effectivePageSize;
         Instant nextCursor = hasMore
-                ? items.get(items.size() - 1).timestamp()  // timestamp of last item
+                ? items.getLast().timestamp()  // timestamp of last item
                 : null;
 
         return new TransactionHistoryResponse(items, nextCursor, hasMore);
@@ -213,7 +227,7 @@ public class TransactionService {
             log.warn("Ownership violation callerId={} accountId={} context={}",
                     callerId, account.getId(), context);
             throw new AccessDeniedException(
-                    "Account does not belong to the authenticated user"
+                   context + " does not belong to the authenticated user"
             );
         }
         if (!account.isActive()) {
